fixed navbar logo align

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ header {
 
 .navbar-logo img {
     height: 30px;
+    vertical-align: middle;
 }
 
 
